# va_list-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
example/: Cargo.toml
example/src/: example.rs
ffi/: va_list.c
src/: lib.rs
tests/: test.rs
